open loop measurements

--- a/posts/2017-07-24.md
+++ b/posts/2017-07-24.md
@@ -324,3 +324,140 @@ When we use this command line instead of the ones up above, we get latency-throu
 ![scaling2](https://github.com/frankmcsherry/blog/blob/master/assets/latency/scaling2.png)
 
 Notice that the x-axis, throughput, goes out *lots* farther than up above. We max out at 12.5 million elements per second. It's a pretty small change, but one that greatly affects how easy it is to compute the answer.
+
+### Addendum: Open-loop measurements (2017-08-14)
+
+I was recently reading an slide deck from Azul which makes an excellent point, one I hadn't clearly understood: when taking latency measurements, there is a huge difference between *closed-loop* (where the harness waits for responses before making new requests) and *open-loop* (where the harness does not wait). 
+
+The self-regulation of a closed-loop harness can cause it to take fewer measurements in periods of poor latency.
+
+The example Azul gave, which made this super clear for me, is: imagine a system that for the first half of every second responds to requests in one millisecond. For the second half of every second it enqueues the request, doing something like garbage collection or the like. 
+
+1. A closed-loop harness, which issues one request (or a batch) and then awaits the response before issuing the next, will see some 500 measurements of "one millisecond" and one measurement of "500 milliseconds". If you plot that distribution, it looks great. There is a tail, but hey its reality and real measurements have tails.
+
+2. An open-loop harness, which issues requests independent of the state of the responses to its requests, will see some 500 measurements of "one millisecond" and some 500 measurements of "up to half a second". If you plot that distribution, it looks pretty terrible. What used to be the "tail" up above is now "half of the responses. Barf. The previous reality was better.
+
+The difference is that the closed-loop harness slows down testing when the system slows down. That's really important to notice. It could be that for your system closed-loop testing is all you need (perhaps you have interactive sessions with few clients?), but it seems like a great point to make clear.
+
+All those measurements up above are closed-loop testing. The average latency numbers are "elapsed time / requests complete". Writing that out, it seems like it was a horrible lie from the beginning. (Historical note: in the Naiad paper we actually did an open-loop harness for our "real-time streaming" experiment. So, not total suck when it matters.)
+
+#### Making things right
+
+Let's look at the difference between open-loop testing and closed-loop testing. We have a bunch of measurements from up above, and we are going to re-do a bunch of them with a different test harness. And, as you will see, we will need to change a few other things too.
+
+How do you write an open-loop harness? Timely dataflow workers are generally written as a loop where you repeatedly do dataflow work, and at any point can stuff some more inputs into the dataflow. Our workers are going to plan out when they should introduce each request, and if they fall behind they can introduce larger batches of inputs with the logical times recorded.
+
+The code I wrote expects a `ns_per_request`, the number of nanoseconds to wait between each request, and whenever it gets a chance it plays requests out to catch up with "real time".
+
+```rust
+while (request_counter * ns_per_request < elapsed_ns {
+    input.advance_to(request_counter * ns_per_request);
+    input.insert((rng1.gen_range(0, nodes), rng1.gen_range(0, nodes)));
+    input.remove((rng2.gen_range(0, nodes), rng2.gen_range(0, nodes)));
+    request_counter += 1;
+}
+```
+
+Although we may introduce records a bit later than they arrived, we do know when they arrived and we will ultimately use that time to measure latency.
+
+At the same time, we are watching our timely computation to see how promptly results get emitted. The timestamp our computation uses is "nanoseconds from start of computation", and we are going to watch for the gaps between when times were submitted and when they are marked as complete by timely.
+
+```rust
+// Determine completed ns.
+let acknowledged_ns: u64 = probe.with_frontier(|frontier| frontier[0].inner);
+
+// Determine real elapsed ns.
+let elapsed = timer.elapsed();
+let elapsed_ns = elapsed.as_secs() * 1_000_000_000 + (elapsed.subsec_nanos() as u64);
+
+// any un-recorded measurements that are now complete should be recorded.
+while (measurements.len() * ns_per_request < acknowledged_ns {
+    let requested_at = measurements.len() * ns_per_request);
+    measurements.push(elapsed_ns - requested_at);
+}
+```
+
+This should capture all of the gaps between the logical moment in the experiment where we had the ability to produce the result, and the real moment in the experiment where we noticed that its consequences were complete.
+
+This is not only "open-loop", in that we keep feeding inputs without awaiting completion, but it is also generally more fair than what we were doing for our closed-loop measurements. Previously, we imagined the simultaneous arrival of a batch of requests, and measured the time to retire them. There was no discussion of how long the record hung out in buffers awaiting the opportunity to get submitted as a batch, which is something we are now tracking.
+
+How does it perform? I have the code produce the median, 99th percentile, and maximum latencies over a ten second test.
+
+|  throughput |        median |            99th |             max |
+|------------:|--------------:|----------------:|----------------:|
+|   100,000/s |     459,076ns |    26,465,622ns |    94,155,622ns |
+|   200,000/s |  14,744,855ns |   163,095,860ns |   237,240,860ns |
+|   300,000/s |  95,300,159ns |   304,404,372ns | 1,274,797,030ns |
+|   400,000/s | 331,634,458ns | 1,723,336,728ns | 2,302,040,085ns |
+|   500,000/s | 882,740,273ns | 2,791,137,348ns | 2,875,759,348ns |
+
+Here `throughput` really means "offered load". The distinction is that, as we only run the experiment for a fixed duration and seem to have latencies crawling up towards that duration, we may not have actually measured a stable configuration. That is on me, and the experimental rig should get better.
+
+How do these numbers compare with those from before? Let me copy and paste the corresponding measurements we had from the batch-sizing experiments
+
+| batch size | latency  (s) | throughput (elts/s) |
+|-----------:|-------------:|--------------------:|
+|          1 |  0.000022360 |            44723.61 |
+|         10 |  0.000096040 |           104122.98 |
+|        100 |  0.000642212 |           155711.79 |
+|       1000 |  0.004543951 |           220072.78 |
+|      10000 |  0.030170409 |           331450.60 |
+|     100000 |  0.209353117 |           477661.86 |
+|    1000000 |  1.654989484 |           604233.44 |
+
+It is hard to make direct comparisons, because we held different things constant in each case, but I think it is safe to say that the open-loop measurements are "worse" than the closed loop ones. Worse in the sense that they suggest a less-good system, but better in the sense that it was a better experiment, and it seems that not everything fell apart when going from closed to open loop testing.
+
+#### Things fall apart
+
+Let's try out two threads. Each of them are going to play out some target rate of requests, and record the rate at which they get retired. I've rigged the code so that they hit disjoint but overlapping times with their requests. I'll report the maximum of the reported medians, 99th percentiles, and maximums between the two workers. I'll also halve the target rates, so that the "system" has throughputs corresponding to the single worker.
+
+|  throughput |        median |            99th |             max |
+|------------:|--------------:|----------------:|----------------:|
+|   100,000/s | 236,489,514ns |   812,808,412ns | 5,375,793,773ns |
+|   200,000/s | 401,989,270ns | 8,242,452,539ns | 9,399,414,985ns |
+
+Ok, let's stop here. The median latency is up in the hundreds of *milliseconds*, which is pretty much forever in timely dataflow terms. For the second row, the maximum measurement is roughly the duration of the experiment, which should warn us about something. Partly, that my measurement only captures completed measurements, which biases it in the "faster" direction. Also that not a lot really got done in that second row.
+
+What the hell is going on?
+
+#### Things get put back together
+
+After a touch of sleuthing around, this turns out to be a pretty fundamental defect in how my implementation of timely dataflow did its progress tracking logic. There is a bunch of details, but the short version is that there was a lot of code that looked like:
+
+```rust
+for (time, diff) in updates {
+    frontier.update(time, diff);
+}
+```
+
+where `frontier` is some clever type that tracks the lower envelope of all times in play at the moment. It is like a fancy `min` for partial orders, which maintains all of the elements in the set that are not greater than some other element.
+
+The problem was, it *maintains* this lower envelope after each call to `update`. This means that if `updates` is ever quite large, and if the updates each change the frontier (say, for example: describing the consumption of a message at each time in sequence), then this thing is going to end up taking quadratic time. One way that `updates` might get large is if one worker heads of to do some work, the other worker starts slamming it with messages, which only cause it to take more time the next go round.
+
+---
+
+Now, this is wrong. The updating shouldn't have to take quadratic time, because we only need the invariant to be correct *after* we have applied all of the updates. So, I went and touched some code that hadn't been touch in years, and switched all of the interfaces from single element updates, to batch iterator updates. 
+
+We are now measuring some new code. This correction has the potential to improve even the single-threaded case, as whenever we dip off for one of those several hundred millisecond breaks in the 99th percentile tail, the next thing we are going to do is drop in several thousand records. They get batched somewhat, but this could actually improve the behavior of the system even for one worker:
+
+|  throughput |        median |            99th |             max |
+|------------:|--------------:|----------------:|----------------:|
+|   100,000/s |     278,569ns |	   26,223,434ns |	 97,659,698ns |
+|   200,000/s |   8,157,470ns |	  229,676,978ns |	309,386,978ns |
+|   300,000/s |  54,992,987ns |	  241,406,483ns | 1,186,357,171ns |
+|   400,000/s | 203,661,730ns |	  566,640,573ns | 1,560,094,012ns |
+|   500,000/s | 561,085,336ns |	2,601,315,288ns | 2,687,729,288ns |
+
+It does. At least, the median latencies are all down. The 99th and max aren't much changed, but I think they are mostly artifacts of the state compaction logic, rather than overhead in progress tracking. 
+
+What about for multiple workers? That seems to have been fixed as well. Holding the offered load fixed as we increase the workers, we see general reductions in the median latency, with a bit of a mixed bag up at the 99th percentile and beyond.
+
+|  throughput |        median |            99th |             max |
+|------------:|--------------:|----------------:|----------------:|
+|   100,000/s |     214,541ns |	   24,753,896ns |	 64,039,274ns |
+|   200,000/s |     686,818ns |	   82,600,775ns |	143,860,775ns |
+|   300,000/s |   4,604,735ns |	  889,050,353ns |	988,980,359ns |
+|   400,000/s |  22,654,736ns |	2,020,938,633ns	| 2,108,488,633ns |
+|   500,000/s |  94,732,829ns |	1,342,960,963ns | 1,429,652,963ns |
+
+I think these numbers are pretty interesting, especially near the median latency where we observe a 10x drop through the doubling of workers. The tail latencies are less amazing, and seem like a great thing to try and reign in. I have some theories about where the time goes (or rather, what blocks the completion), and it is neat to have a better measurement framework in which to evaluate potenial changes.
