--- a/posts/2017-03-01.md
+++ b/posts/2017-03-01.md
@@ -650,3 +650,90 @@ One question this raises is whether we really need hash tables as the index stru
 Plus we are actually going to put real indices in place at some point, which should make the distinction less important.
 
 We still have an up-tick for increasing batch sizes in the small graph, and I still want to sort that out. Removing all this hashing is one way of getting rid of the noise that is leaving the source of the problem a mystery.
+
+### Addendum: Re-engineering `group` (April 2, 2017)
+
+I did a bit of a re-write of the core `group` logic. Not much has changed algorithmically, but certain parts were tidied up enough that we spend less time futzing around with messy piles of data.
+
+For example, previously the operator accepted batches of keyed input data, and for each key flipped through all times to create a list of `(key, time)` pairs we should look into. That's great, but we didn't really need to do that; we can just wait until we start to work on the key, and put together the list of times for that key. This required a bit of sanity checking about "exactly what times are we planning on working on" that was enabled by the simplified code structure.
+
+We also bite off a larger chunk of the graph to work on, doing only one sweep through the keys where we may previously have done several, feeding the output into different batches as appropriate (when we have multiple incomparable capabilities).
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   45s (51s) | 57s (51s) |    44s (31s) |
+| 10000 x 100 |   39s (51s) | 43s (38s) |    30s (25s) |
+| 100000 x 10 |   48s (60s) | 29s (28s) |    19s (19s) |
+| 1000000 x 1 |   55s (66s) | 20s (24s) |    12s (17s) |
+
+Some interesting things happen here. The small graph performance improves a fair bit, the very large batch performance improves quite a bit (more on this), and the small batch large graph performance takes a bit of a hit. I'm not exactly sure what the deal is here, except that we are doing more work in larger batches now, and this provides both opportunities to do things well and to do things badly.
+
+I want to call out the large graph, multiple worker numbers. There is a pretty serious improvement there, which is even more impressive when you learn that the first 4.5 second are just prepping the computation (loading the graph and doing the initial bfs computation). So what we are actually seeing appears to by 12s of compute down to 8s of compute. I just need to do that a few more times. Also, make sure to run integration test to see that we are producing the correct output (ed: apparently).
+
+### Addendum: Less interesting times (April 7, 2017)
+
+I made what I think of as a pretty substantial change to the way `group` works. Let me recap, both because it gets us on the same page, and because I need the practice.
+
+The `group` operator works on a bunch of keys in parallel, and for our purposes we are just going to talk about what it does for each key individually (it maps this behavior across all keys). 
+
+The `group` operator repeatedly gets presented with batches of updates each of which corresponds to an *interval* of partially ordered time: `[lower, upper)`, where `lower` and `upper` are both antichains (sets whose elements are mutually incomparable) and the interval includes those times greater or equal to an element of `lower` but not greater or equal to any element of `upper`. 
+
+When presented with an interval of updates, the `group` operator is now in a position to determine the corresponding interval of updates to its output. All of the inputs updates at times not after `upper` have been locked in, and this means that mathematically that all of the output updates at times not after `upper` are also locked in, we just haven't computed them yet. So the `group` operator needs to determine the output updates at times in the interval `[lower, upper)`.
+
+The previous implementation did this by tracking all of the times at which the output might change, and each time around seeing which of these times are in the interval `[lower, upper)` and working on those times. This was intended to be very precise, but it has some serious overhead and, counter-intuitively, can end up less precise that simpler methods.
+
+The current implementation (this is all a work in progress) just takes as input `lower` and `upper`, and starts looking for times that land in this interval. A time is plausibly interesting, in that it could possibly have a non-zero output update, if it is the join of sets of times found in input or output updates. As we are (currently) planning on walking through all updates anyhow (to "simulate" the history of the values for the key), we have the opportunity to start forming these sets of joined things and seeing which land in our target interval.
+
+Although we might consider lots of times, each time will either be (i) in the `[lower, upper)` interval, in which case we want to reconsider it, or (ii) at `upper` or beyond, in which case we should defer it for future processing. We can also skip any times in the future of defered times, because we'll just re-discover them when we get to them in the future, right?
+
+Or will we?
+
+This is meant to be the "good news" of this approach: if in the future it turns out that the updates that prompted some possibly interesting time vanish, perhaps because they cancel when seen from this point in the future, then great! Although we thought it might be worth looking in to what the input and output look like at that time, if by the time we get to the interval containing the time the updates just aren't there any more, no work for us to do!
+
+Let's look at an example: Imagine we are supplying one thousand rounds of input to an iterative computation, so timestamps look like `(round, iteration)`. We might start with updates that look like 
+
+	("hello", (17, 0), +1)
+	("world", (23, 0), +1)
+
+Meaning that `"hello"` shows up in the 17th round of input and `"world"` shows up in the 23rd round of input. Perhaps over the course of the iterative computation, the `"world"` record evolves a bit and eventually goes away
+
+	("world", (23, 3), -1)
+
+Of course, `"hello"` can evolve too, and perhaps in a later iteration it prompts something exciting:
+
+	("wombat", (17, 5), +1)
+
+This is very exciting, because wombats are magical animals. Now, based on our tradition reasoning, in addition to our general excitement about wombats we may also come to the conclusion that the time `(23, 5)` is pretty interesting. Some stuff happens at `(_, 5)`, and some stuff happens at `(23, _)`, so stuff probably happens at `(23, 5)` that we should check out.
+
+As it turns out, nothing happens at `(23, 5)`, because by the time we've gotten to iteration five, the `"world"` updates have canceled with each other. The input collection is identical to the collection at `(23, 4)` and at `(22, 5)` and even at `(22, 4)`, which pretty much means that it doesn't experience change and so its output doesn't change either.
+
+Our prior implementations, each of which tracked all possibly interesting times explicitly, would miss this opportunity because they flagged the times `(17,3)` and `(19,3)` as interesting, and lost track of the fact that their reasons for being interesting cancel each other out. When we arrive at `(23, 0)` we would be warned about the excitement associated with `(19, 3)` and 
+
+So that's all a very nice hypothetical optimization, but what does it do for our `bfs` computation?
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   40s (45s) | 59s (57s) |    45s (44s) |
+| 10000 x 100 |   39s (39s) | 45s (43s) |    31s (30s) |
+| 100000 x 10 |   49s (48s) | 30s (29s) |    20s (19s) |
+| 1000000 x 1 |   55s (56s) | 18s (20s) |    11s (12s) |
+
+Not a great deal. There is a little bit of movement, but I think most of it is attributable to noise. 
+
+This is sort of good news, because we haven't actually put the optimization of ignoring canceling times into place yet, we are just seeing how well we do when we have to rediscover times in each `[lower, upper)` interval rather than having them listed for us. We removed a fair amount of "time management" code, at the possible cost of re-evaluating the user logic at more times than strictly necessary. Though, practically, I'm not sure we actually do any more evaluation this way, as we were fairly conservative about which times we would consider previously (in that we considered quite a lot).
+
+|  experiment |     1k / 2k |  1m / 10m | 1m / 10m -w2 |
+|------------:|------------:|----------:|-------------:|
+| 1 x 1000000 |           - |         - |            - |
+| 10 x 100000 |      (117s) |     (82s) |        (68s) |
+| 100 x 10000 |       (75s) |     (65s) |        (46s) |
+| 1000 x 1000 |   40s (40s) | 59s (57s) |    42s (45s) |
+| 10000 x 100 |   36s (39s) | 44s (45s) |    30s (30s) |
+| 100000 x 10 |   46s (49s) | 30s (30s) |    20s (20s) |
+| 1000000 x 1 |   56s (55s) | 18s (18s) |    10s (11s) |
